Sqlite Database working

--- a/Sudo/appsettings.Development.json
+++ b/Sudo/appsettings.Development.json
@@ -1,9 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SudoNet.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "environmentVariables": {
+    "ASPNETCORE_ENVIRONMENT": "Development"
   }
 }
