--- a/kube/sudoNet.yaml
+++ b/kube/sudoNet.yaml
@@ -22,11 +22,11 @@ spec:
         # env:
         # - name: "ASPNETCORE_ENVIRONMENT"
         #   value: "Kubernetes"
-      #   volumeMounts:
-      #   - name: secrets
-      #     mountPath: /app/secrets
-      #     readOnly: true
-      # volumes:
-      # - name: secrets
-      #   secret:
-      #     secretName: secret-appsettings
+        volumeMounts:
+        - name: secrets
+          mountPath: /app/secrets
+          readOnly: true
+      volumes:
+      - name: secrets
+        secret:
+          secretName: secret-appsettings
