--- a/kube/sudoNet.yaml
+++ b/kube/sudoNet.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - name: sudonet
         image: alexmickelson/sudonet:latest
-        imagePullPolicy: always
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         env:
